Sun Dec 13 20:02:15 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fix a typo

Sun Dec 13 19:54:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/lib/envutil.rb: move envutil's assertions under Test::Unit::Assertion.
	* test/lib/test/unit/assertions.rb: ditto.

Sun Dec 13 19:24:20 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* parse.y (lex_state_name): Make it return the correct names.
	  Add new names to follow r51617; Indices ffs(2) returns are 1-origin.

Sun Dec 13 18:40:45 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* parse.y: debug output of lex_state transition if PARSER_DEBUG

Sun Dec 13 18:49:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (parse_mode_enc): preserve encoding of mode string in
	  warnings.

	* io.c (io_encname_bom_p): check BOM prefix only, not including
	  UTF prefix.

	* io.c (parse_mode_enc): warn BOM with non-UTF encoding.

	* io.c (parse_mode_enc): fix buffer overflow.

Sun Dec 13 18:35:57 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/function.c (initialize): check all arguments first.
	  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/fiddle/conversions.h (PTR2NUM): use signed integer to make
	  Fixnum for negative values.

Sun Dec 13 18:33:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): always check index range against the
	  receiver array length, which can be shortened by elements
	  conversion.  reported by Marcin 'Icewall' Noga of Cisco Talos.

Sun Dec 13 18:28:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/psych_emitter.c (start_document): should not exceed
	  tags array range.

	* ext/psych/psych_emitter.c (start_document): ensure string before
	  encoding conversion.

Sun Dec 13 18:26:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c (tk_hash_kv): check types of array
	  argument.  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/tk/tkutil/tkutil.c (cbsubst_table_setup): check length of